--- a/Point/kubernetes/deployment.yml
+++ b/Point/kubernetes/deployment.yml
@@ -1,22 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: Point
+  name: point
+  namespace: rentbook
   labels:
-    app: Point
+    app: point
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: Point
+      app: point
   template:
     metadata:
       labels:
-        app: Point
+        app: point
     spec:
       containers:
-        - name: Point
-          image: username/Point:latest
+        - name: point
+          image: rentbook.azurecr.io/point:latest
           ports:
             - containerPort: 8080
           readinessProbe:
