--- a/Rental/src/main/resources/application.yml
+++ b/Rental/src/main/resources/application.yml
@@ -26,10 +26,10 @@ spring:
       bindings:
         event-in:
           group: Rental
-          destination: book.rental.system
+          destination: bookrental
           contentType: application/json
         event-out:
-          destination: book.rental.system
+          destination: bookrental
           contentType: application/json
 
 logging:
@@ -58,8 +58,8 @@ spring:
       bindings:
         event-in:
           group: Rental
-          destination: book.rental.system
+          destination: bookrental
           contentType: application/json
         event-out:
-          destination: book.rental.system
+          destination: bookrental
           contentType: application/json
