--- a/Payment/Dockerfile
+++ b/Payment/Dockerfile
@@ -1,4 +1,5 @@
-FROM openjdk:8u212-jdk-alpine
+#FROM openjdk:8u212-jdk-alpine
+FROM openjdk:11
 COPY target/*SNAPSHOT.jar app.jar
 EXPOSE 8080
 ENTRYPOINT ["java","-Xmx400M","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar","--spring.profiles.active=docker"]
