--- a/Rental/kubernetes/service.yaml
+++ b/Rental/kubernetes/service.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: Rental
+  name: rental
+  namespace: rentbook
   labels:
-    app: Rental
+    app: rental
 spec:
   ports:
     - port: 8080
       targetPort: 8080
   selector:
-    app: Rental
+    app: rental
