--- a/gateway/kubernetes/service.yaml
+++ b/gateway/kubernetes/service.yaml
@@ -1,12 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: book
+  name: gateway
+  namespace: rentbook
   labels:
-    app: book
+    app: gateway
 spec:
   ports:
     - port: 8080
       targetPort: 8080
+  type: LoadBalancer
   selector:
-    app: book
+    app: gateway
